--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -21,3 +21,9 @@
 @import 'base/helpers';
 
 //Components & Pages
+@import 'components/header';
+@import 'components/banner';
+@import 'components/services';
+@import 'components/team';
+@import 'components/portfolio';
+@import 'components/contact';
