--- a/src/stylesheets/base/_buttons.scss
+++ b/src/stylesheets/base/_buttons.scss
@@ -44,9 +44,9 @@
 }
 
 .btn-terciary, %btn-terciary {
-    color: $gray-97;
+    color: $gray-bc;
     background-color: $white;
-    border: 1px solid $gray-df;
+    border: 1px solid $gray-bc;
     border-radius: 5px;
 
     &:hover {
