--- a/src/stylesheets/base/_modal.scss
+++ b/src/stylesheets/base/_modal.scss
@@ -60,7 +60,7 @@ $modal-backdrop-bg: rgba($black, 0.5) !default;
 
     svg {
         @include font-size(20px);
-        color: $gray-97;
+        color: $gray-bc;
     }
 
 }
