--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -5,21 +5,15 @@
 
 // Colors
 
-$primary:    #357ce3 !default;
-$secondary:  #ff6634 !default;
-$black:      #000000 !default;
-$white:      #ffffff !default;
+$primary:   #54e4c5;
+$secondary: #ffd400;
+$white:     #ffffff;
+$black:     #000000;
+$gray-bc:   #bcbcbc;
+
 $green:      #04c434 !default;
 $yellow:     #fbbc05 !default;
-$sky-blue:   #deebff !default;
-$red:        #d0021b !default;
-$alice-blue: #f5faff !default;
-
-$gray-f8:   #f8f8f8 !default;
-$gray-df:   #dfdfdf !default;
-$gray-c4:   #c4c4c4 !default;
-$gray-97:   #979797 !default;
-$gray-4a:   #4a4a4a !default;
+$red:       #d0021b !default;
 
 $primary-disabled: lighten($primary, 5%) !default;
 $primary-dark: darken($primary, 5%);
@@ -53,19 +47,19 @@ $border-radius-lg: 30px;
 $header-height:      55px   !default;
 $header-height-md:   65px  !default;
 $header-height-searchbar:   158px  !default;
-$header-height-searchbar-sm: 124px !default; 
+$header-height-searchbar-sm: 124px !default;
 
 
 // Border color
-$gray-border: 1px solid $gray-97;
+$gray-border: 1px solid $gray-bc;
 
 
 // Container sizes
 $container: 1080px !default;
 
 // Box shadow
-$box-shadow: 0 2px 5px $gray-df;
-$box-shadow-hover: 0 4px 10px $gray-df;
+$box-shadow: 0 2px 5px $gray-bc;
+$box-shadow-hover: 0 4px 10px $gray-bc;
 $box-shadow-primary: 0 3px 6px 2px rgba(53, 124, 227, 0.25);
 
 //Z-indexes
