--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -3,13 +3,13 @@
 \*------------------------------------*/
 
 @charset 'utf-8';
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;900&display=swap');
 
-$font-family-base: 'Roboto', sans-serif;
+$font-family-base: 'Montserrat', sans-serif;
 
 // Sizes
 
-$font-size-base: 0.875rem; // 14px
+$font-size-base: 1rem; // 14px
 $lead-font-size: 1.5rem;
 
 // Weights
