Lottie animation on banner

--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import 'base/helpers';
 
 //Components & Pages
+@import 'components/main';
 @import 'components/header';
 @import 'components/banner';
 @import 'components/services';
