--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -9,7 +9,9 @@ $primary:   #54e4c5;
 $secondary: #ffd400;
 $white:     #ffffff;
 $black:     #000000;
+$gray-da:   #dae1e7;
 $gray-bc:   #bcbcbc;
+$gray-97:   #979797;
 
 $green:      #04c434 !default;
 $yellow:     #fbbc05 !default;
