--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -8,7 +8,7 @@
 $primary:   #54e4c5;
 $secondary: #ffd400;
 $white:     #ffffff;
-$black:     #000000;
+$black:     #4a4a4a;
 $gray-da:   #dae1e7;
 $gray-bc:   #bcbcbc;
 $gray-97:   #979797;
