--- a/src/stylesheets/components/_header.scss
+++ b/src/stylesheets/components/_header.scss
@@ -43,8 +43,12 @@
     }
 
     .header__item {
-        @include font-size(18px);
         margin: 0 1.5rem;
+
+    }
+
+    .header__link {
+        @include font-size(18px);
 
         &:hover, &.active {
             font-weight: $font-weight-semibold;
