WIP: service section

--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -26,5 +26,6 @@
 @import 'components/banner';
 @import 'components/services';
 @import 'components/team';
+@import 'components/pill';
 @import 'components/portfolio';
 @import 'components/contact';
