--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -9,7 +9,9 @@ $primary:   #54e4c5;
 $secondary: #ffd400;
 $white:     #ffffff;
 $black:     #4a4a4a;
+$gray-fa:   #fafafa;
 $gray-da:   #dae1e7;
+$gray-f8:   #f8f8f8;
 $gray-bc:   #bcbcbc;
 $gray-97:   #979797;
 
@@ -43,6 +45,7 @@ $screen-xxl: 1800px !default;
 $border-radius-sm: 7px;
 $border-radius: 10px;
 $border-radius-lg: 30px;
+$border-radius-cirlce: 50%;
 
 
 //Header sizes
