--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -123,3 +123,33 @@ $font-weight-bold: 900;
         @include font-size(30px);
     }
 }
+
+.section-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+
+.section-title__number, %secondary-title {
+    @include font-size(40px);
+
+    margin-left: 0;
+    color: $secondary;
+    font-weight: $font-weight-bold;
+
+    @media(min-width: $screen-md) {
+        @include font-size(70px);
+    }
+}
+
+.section-title__title, %secondary-title {
+    @include font-size(15px);
+
+    margin-left: -0.5rem;
+    font-weight: $font-weight-bold;
+
+    @media(min-width: $screen-md) {
+        @include font-size(24px);
+    }
+}
