--- a/src/stylesheets/components/_services.scss
+++ b/src/stylesheets/components/_services.scss
@@ -1,1 +1,19 @@
-.services {}
+.services {
+    @extend %wrapper;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.services__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    > * {
+        margin-bottom: 2rem;
+    }
+}
