Our team section

--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -24,8 +24,9 @@
 @import 'components/main';
 @import 'components/header';
 @import 'components/banner';
+@import 'components/member';
 @import 'components/services';
-@import 'components/team';
+@import 'components/our-team';
 @import 'components/pill';
 @import 'components/portfolio';
 @import 'components/contact';
