--- a/src/stylesheets/components/_portfolio.scss
+++ b/src/stylesheets/components/_portfolio.scss
@@ -1,1 +1,26 @@
-.portfolio {}
+.portfolio {
+    @extend %wrapper;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.portfolio__list {
+    display: flex;
+    flex-direction: column;
+
+    @media(min-width: $screen-lg) {
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+
+        > * {
+            &:nth-child(2n) {
+                margin-top: 4rem;
+            }
+        }
+    }
+}
