--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -23,6 +23,7 @@
 //Components & Pages
 @import 'components/banner';
 @import 'components/contact';
+@import 'components/footer';
 @import 'components/header';
 @import 'components/main';
 @import 'components/member';
