--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -24,6 +24,8 @@ $primary-disabled: lighten($primary, 5%) !default;
 $primary-dark: darken($primary, 5%);
 $secondary-dark: darken($secondary, 5%);
 
+$seconday-transparent: rgba(259, 216, 0, 0.9);
+
 $background-color: $white;
 $font-color: $black;
 
