--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -75,3 +75,4 @@ $search-bar-z-index: 1 !default;
 $header-z-index:     2 !default;
 $mobile-nav-z-index: 3 !default;
 $cookie-z-index:     4 !default;
+$note-z-index:       5 !default;
