--- a/src/stylesheets/components/_contact.scss
+++ b/src/stylesheets/components/_contact.scss
@@ -1,1 +1,71 @@
-.contact {}
+.contact {
+    @extend %wrapper;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: visible;
+}
+
+.contact__note {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    bottom: -200px;
+    z-index: $note-z-index;
+    height: 240px;
+    background: $white;
+    box-shadow: $box-shadow;
+    box-sizing: border-box;
+
+    @media(min-width: $screen-lg) {
+        bottom: -325px;
+        width: 400px;
+        height: 347px;
+    }
+}
+
+.contact__hole-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-bottom: 4rem;
+    width: 100%;
+}
+
+.contact__information {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 2rem;
+    padding: 0 2rem;
+
+    @media(min-width: $screen-lg) {
+        margin-bottom: 4rem;
+    }
+}
+
+.contact__icon {
+    margin-bottom: 1rem;
+    max-width: 17px;
+    max-height: 14px;
+
+    @media(min-width: $screen-lg) {
+        margin-bottom: 1.5rem;
+        max-width: 21px;
+        max-height: 18px;
+    }
+}
+
+.contact__text {
+    @include font-size(15px);
+
+    font-weight: $font-weight-semibold;
+
+    @media(min-width: $screen-md) {
+        @include font-size(18px);
+    }
+}
