--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -31,4 +31,5 @@
 @import 'components/pill';
 @import 'components/portfolio';
 @import 'components/project-card';
+@import 'components/project-details';
 @import 'components/services';
