--- a/src/stylesheets/components/_project-card.scss
+++ b/src/stylesheets/components/_project-card.scss
@@ -15,6 +15,7 @@
     box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.1);
 
     @media(min-width: $screen-lg) {
+        margin-bottom: 3rem;
         width: 470px;
         height: 560px;
     }
@@ -33,7 +34,6 @@
 
     margin-bottom: 0.5rem;
     font-weight: $font-weight-semibold;
-    text-transform: uppercase;
 
     @media(min-width: $screen-lg) {
         @include font-size(18px);
