Creada version desktop para detalle de proyecto, WIP footer versión desktop, incluido link en logo sana, ajustes en ancho de wrapper

--- a/src/stylesheets/base/_wrapper.scss
+++ b/src/stylesheets/base/_wrapper.scss
@@ -12,6 +12,7 @@
     }
 
     @media(min-width: $screen-xl) {
-        max-width: 1200px;
+        padding: 0;
+        max-width: 990px;
     }
 }
