--- a/src/stylesheets/components/_portfolio.scss
+++ b/src/stylesheets/components/_portfolio.scss
@@ -14,7 +14,7 @@
 
     @media(min-width: $screen-lg) {
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: space-between;
         flex-wrap: wrap;
 
         > * {
