--- a/src/stylesheets/components/_footer-internal.scss
+++ b/src/stylesheets/components/_footer-internal.scss
@@ -55,11 +55,28 @@
 }
 
 .footer-internal__linkedin {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -0.5rem;
     width: 20px;
     height: 20px;
+    border: 1px solid $gray-da;
+    border-radius: 50%;
+
+
+    img {
+        width: 9px;
+        height: 9px;
+    }
 
     @media(min-width: $screen-md) {
         width: 32px;
         height: 32px;
+
+        img {
+            width: 15px;
+            height: 15px;
+        }
     }
 }
