--- a/src/stylesheets/components/_banner.scss
+++ b/src/stylesheets/components/_banner.scss
@@ -1,3 +1,5 @@
+$banner-shadow: #bfd9e5 !default;
+
 .banner {
     display: flex;
     flex-direction: column;
@@ -12,7 +14,7 @@
 
         flex-direction: row;
         align-items: flex-start;
-        height: 690px;
+        height: 740px;
     }
 }
 
@@ -25,7 +27,7 @@
 
         @media(min-width: $screen-lg) {
             @include font-size(52px);
-            padding-top: 6rem;
+            padding-top: 4.3rem;
             width: 281px;
             line-height: 1.4;
             text-align: left;
@@ -38,7 +40,8 @@
 
         @media(min-width: $screen-md) {
             width: 495px;
-            padding-top: 8rem;
+            padding-top: 11rem;
+            filter: drop-shadow(0px 8px 5px $banner-shadow);
         }
 
         @media(min-width: $screen-xl) {
