--- a/src/stylesheets/components/_banner.scss
+++ b/src/stylesheets/components/_banner.scss
@@ -4,26 +4,37 @@ $banner-shadow: #bfd9e5 !default;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     background-size: 115% 100%;
     background-image: url('../../assets/images/banner_bg.png');
     background-repeat: no-repeat;
+    height: 100%;
+    min-height: 320px;
 
     @media(min-width: $screen-md) {
-        background-size: 100%;
+        height: 540px;
+        background-size: 115% 100%;
+    }
 
+    @media(min-width: $screen-lg) {
+        height: 740px;
+        background-size: 100%;
         flex-direction: row;
         align-items: flex-start;
-        height: 740px;
+        justify-content: center;
     }
 }
 
     .banner__title {
         @include font-size(22px);
+        padding: 2rem 0;
         width: 100%;
         font-weight: $font-weight-semibold;
         text-align: center;
-        padding: 2rem 0;
+
+        @media(min-width: $screen-md) {
+            @include font-size(32px);
+        }
 
         @media(min-width: $screen-lg) {
             @include font-size(52px);
@@ -39,7 +50,11 @@ $banner-shadow: #bfd9e5 !default;
         height: auto;
 
         @media(min-width: $screen-md) {
+            padding-top: 4rem;
             width: 495px;
+        }
+
+        @media(min-width: $screen-lg) {
             padding-top: 11rem;
             filter: drop-shadow(0px 8px 5px $banner-shadow);
         }
