Creada funcion para marcar el item del menu seleccionado segun la seccion visualizada, fix estructura de proyectos no normalizada

--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -10,6 +10,7 @@
 @import 'base/margins';
 @import 'base/flexbox';
 @import 'base/wrapper';
+@import 'base/section';
 @import 'base/buttons';
 @import 'base/labels';
 @import 'base/inputs';
