--- a/src/stylesheets/components/_our-team.scss
+++ b/src/stylesheets/components/_our-team.scss
@@ -6,9 +6,12 @@
     align-items: center;
     justify-content: center;
     margin-top: 2rem;
+    margin-bottom: 2rem;
 
     @media(min-width: $screen-lg) {
-        margin-top: 6rem;
+        margin-top: -6rem;
+        margin-bottom: 6rem;
+        padding-top: 6rem;
     }
 }
 
