--- a/src/stylesheets/components/_portfolio.scss
+++ b/src/stylesheets/components/_portfolio.scss
@@ -1,11 +1,5 @@
 .portfolio {
-    @extend %wrapper;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 6rem;
+    @extend %section;
 }
 
 .portfolio__list {
