--- a/src/stylesheets/components/_services.scss
+++ b/src/stylesheets/components/_services.scss
@@ -1,15 +1,5 @@
 .services {
-    @extend %wrapper;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 2rem;
-
-    @media(min-width: $screen-md) {
-        margin-top: 4rem;
-    }
+    @extend %section
 }
 
 .services__list {
