Creadas animaciones con figuras sobre banner en home

--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import 'base/form';
 @import 'base/modal';
 @import 'base/circle';
+@import 'base/animations';
 
 // Helpers
 @import 'base/helpers';
