--- a/src/stylesheets/components/_banner.scss
+++ b/src/stylesheets/components/_banner.scss
@@ -10,6 +10,7 @@ $banner-shadow: #bfd9e5 !default;
     background-repeat: no-repeat;
     height: 100%;
     min-height: 320px;
+    position: relative;
 
     @media(min-width: $screen-md) {
         height: 540px;
@@ -62,5 +63,258 @@ $banner-shadow: #bfd9e5 !default;
         @media(min-width: $screen-xl) {
             width: 695px;
             padding-top: 11rem;
+        }
+    }
+
+    .banner__figure {
+        position: absolute;
+        animation: float 3s infinite;
+    }
+
+    // 56x66
+    .banner__figure--ball {
+        top: 7rem;
+        left: 2rem;
+
+        img {
+            width: 25px;
+            height: 29px;
+        }
+
+        @media(min-width: $screen-md) {
+            top: 18rem;
+            left: 6rem;
+        }
+
+        @media(min-width: $screen-lg) {
+            top: 26rem;
+            left: 24rem;
+
+            img {
+                width: auto;
+                height: auto;
+            }
+        }
+
+        @media(min-width: $screen-xl) {
+            top: 28rem;
+            left: 29rem;
+        }
+    }
+
+    // 52x52
+    .banner__figure--green-plus {
+        top: 6rem;
+        right: 10rem;
+
+        img {
+            width: 12px;
+            height: 12px;
+        }
+
+        @media(min-width: $screen-md) {
+            top: 10rem;
+            right: 22rem;
+        }
+
+        @media(min-width: $screen-lg) {
+            top: 18rem;
+            right: 3rem;
+
+            img {
+                width: 26px;
+                height: 26px;
+            }
+        }
+
+        @media(min-width: $screen-xl) {
+            top: 22rem;
+            right: 6rem;
+        }
+    }
+
+    // 48x48
+    .banner__figure--yellow-plus {
+        top: 7rem;
+        right: 9rem;
+
+        img {
+            width: 10px;
+            height: 10px;
+        }
+
+        @media(min-width: $screen-md) {
+            top: 12rem;
+            right: 20rem;
+        }
+
+        @media(min-width: $screen-lg) {
+            top: 23rem;
+            right: 5rem;
+
+            img {
+                width: 24px;
+                height: 24px;
+            }
+        }
+
+        @media(min-width: $screen-xl) {
+            top: 26rem;
+            right: 10rem;
+        }
+    }
+
+    // 52x52
+    .banner__figure--green-plus-2 {
+        top: 13rem;
+        left: 3rem;
+
+        img {
+            width: 10px;
+            height: 10px;
+        }
+
+        @media(min-width: $screen-md) {
+            top: 25rem;
+            left: 8rem;
+        }
+
+        @media(min-width: $screen-lg) {
+            top: 22rem;
+            left: 6rem;
+
+            img {
+                width: 26px;
+                height: 26px;
+            }
+        }
+
+        @media(min-width: $screen-xl) {
+            top: 24rem;
+            left: 10rem;
+        }
+    }
+
+    // 48x48
+    .banner__figure--yellow-plus-2 {
+        top: 10rem;
+        right: 2rem;
+
+        img {
+            width: 12px;
+            height: 12px;
+        }
+
+        @media(min-width: $screen-md) {
+            top: 20rem;
+            right: 4rem;
+        }
+
+        @media(min-width: $screen-lg) {
+            top: 11rem;
+            left: 3rem;
+
+            img {
+                width: 24px;
+                height: 24px;
+            }
+        }
+
+        @media(min-width: $screen-xl) {
+            top: 10rem;
+            left: 6rem;
+        }
+    }
+
+    // 70x70
+    .banner__figure--yellow-round {
+        top: 4rem;
+        left: 5rem;
+
+        img {
+            width: 9px;
+            height: 9px;
+        }
+
+        @media(min-width: $screen-md) {
+            top: 8rem;
+            left: 12rem;
+        }
+
+        @media(min-width: $screen-lg) {
+            top: 10rem;
+            left: 53rem;
+
+            img {
+                width: 35px;
+                height: 35px;
+            }
+        }
+
+        @media(min-width: $screen-xl) {
+            top: 12rem;
+            left: 70rem;
+        }
+    }
+
+    // 58x58
+    .banner__figure--green-round {
+        top: 19rem;
+        left: 10rem;
+
+        img {
+            width: 9px;
+            height: 9px;
+        }
+
+        @media(min-width: $screen-md) {
+            top: 33rem;
+            left: 22rem;
+        }
+
+        @media(min-width: $screen-lg) {
+            top: 33rem;
+            left: 35rem;
+
+            img {
+                width: 29px;
+                height: 29px;
+            }
+        }
+
+        @media(min-width: $screen-xl) {
+            top: 45rem;
+            left: 50rem;
+        }
+    }
+
+    // 106x141
+    .banner__figure--pyramid {
+        top: 5rem;
+        right: 3rem;
+
+        img {
+            width: 31px;
+            height: 42px;
+        }
+
+        @media(min-width: $screen-md) {
+            top: 8rem;
+            right: 8rem;
+        }
+
+        @media(min-width: $screen-lg) {
+            top: 6rem;
+            right: 8rem;
+
+            img {
+                width: 42px;
+                height: 56px;
+            }
+        }
+
+        @media(min-width: $screen-xl) {
+            top: 5rem;
+            right: 13rem;
         }
     }
