--- a/src/stylesheets/base/_animations.scss
+++ b/src/stylesheets/base/_animations.scss
@@ -12,3 +12,17 @@
         transform: translatey(0);
     }
 }
+
+@keyframes float-invested {
+    0% {
+        transform: translatey(25px);
+    }
+
+    50% {
+        transform: translatey(0);
+    }
+
+    100% {
+        transform: translatey(25px);
+    }
+}
