Creadas animaciones en pildoras de servicio

--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -32,6 +32,9 @@
 @import 'components/member';
 @import 'components/our-team';
 @import 'components/pill';
+@import 'components/pill-code';
+@import 'components/pill-design';
+@import 'components/pill-plan';
 @import 'components/portfolio';
 @import 'components/project-card';
 @import 'components/project-detail';
