--- a/src/stylesheets/components/_pill.scss
+++ b/src/stylesheets/components/_pill.scss
@@ -9,6 +9,7 @@
     border-radius: 150px;
     box-shadow: inset 2px 2px 8px -1px rgba($black, 0.1);
     box-sizing: border-box;
+    position: relative;
 
     @media(min-width: $screen-md) {
         padding: 2rem 1rem 4rem;
