Incluida sombra sobre imagen de miembros

--- a/src/stylesheets/components/_member.scss
+++ b/src/stylesheets/components/_member.scss
@@ -3,7 +3,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
     margin-bottom: 2rem;
+}
+
+.member__shadow {
+    position: absolute;
+    top: 0;
+    z-index: $search-bar-z-index;
+    width: 150px;
+    height: 150px;
+    border-radius: $border-radius-cirlce;
+    box-shadow: inset 2px 2px 8px -1px rgba($black, 0.1);
+
+    @media(min-width: $screen-lg) {
+        width: 209px;
+        height: 209px;
+    }
 }
 
 .member__picture {
@@ -12,7 +28,6 @@
     height: 150px;
     background: $gray-f8;
     border-radius: $border-radius-cirlce;
-    box-shadow: inset 18px 15px 26px -7px rgba(0, 0, 0, 0.1);
 
     @media(min-width: $screen-lg) {
         width: 209px;
