Ajustada distancia entre banner y seccion servicios

--- a/src/stylesheets/components/_banner.scss
+++ b/src/stylesheets/components/_banner.scss
@@ -11,6 +11,7 @@ $banner-shadow: #bfd9e5 !default;
     height: 100%;
     min-height: 320px;
     position: relative;
+    margin-bottom: 5rem;
 
     @media(min-width: $screen-md) {
         height: 540px;
