Ajustados margenes de wrapper en version mobile

--- a/src/stylesheets/base/_wrapper.scss
+++ b/src/stylesheets/base/_wrapper.scss
@@ -1,6 +1,6 @@
 .wrapper, %wrapper {
     margin: 0 auto;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     box-sizing: border-box;
 
     @media(max-width: $screen-sm) {
