Actualizada posicion de figuras en servicios, actualizada funcion de cambio de imagen en miembros, actualizadas y comprimidas imagenes de caratula de proyecto, incluido nuevo proyecto nalla, fix tamaño de header en resoluciones tablet

--- a/src/stylesheets/components/_header.scss
+++ b/src/stylesheets/components/_header.scss
@@ -9,6 +9,7 @@
     height: $header-height;
     background-color: $white;
     border-bottom: 1px solid $gray-da;
+    box-sizing: border-box;
 
     @media(min-width: $screen-md) {
         height: $header-height-md;
