--- a/src/stylesheets/components/_member.scss
+++ b/src/stylesheets/components/_member.scss
@@ -22,16 +22,17 @@
     }
 }
 
+// 522x522
 .member__picture {
     margin-bottom: 0.5rem;
     width: 150px;
     height: 150px;
     background: $gray-f8;
-    border-radius: $border-radius-cirlce;
+    // border-radius: $border-radius-cirlce;
 
     @media(min-width: $screen-lg) {
-        width: 209px;
-        height: 209px;
+        min-width: 209px;
+        min-height: 209px;
     }
 }
 
