--- a/src/stylesheets/components/_project-card.scss
+++ b/src/stylesheets/components/_project-card.scss
@@ -22,11 +22,7 @@
 }
 
 .project-card__image {
-    width: 200px;
-
-    @media(min-width: $screen-lg) {
-        width: 297px;
-    }
+    width: 100%;
 }
 
 .project-card__name {
