--- a/src/stylesheets/components/_footer-internal.scss
+++ b/src/stylesheets/components/_footer-internal.scss
@@ -8,13 +8,17 @@
 
     display: flex;
     flex-direction: row;
-    margin: 3rem 1rem 0;
+    margin: 3rem 1.5rem 0;
     padding: 2rem 0;
     border-top: 1px solid $gray-da;
 
     @media(min-width: $screen-md) {
-        margin: 3rem auto;
+        margin: 3rem 1.5rem;
         width: 100%;
+    }
+
+    @media(min-width: $screen-lg) {
+        margin: 3rem auto;
     }
 }
 
