--- a/src/stylesheets/components/_pill.scss
+++ b/src/stylesheets/components/_pill.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     padding: 4rem 1rem;
     width: 300px;
     height: 445px;
@@ -9,14 +10,13 @@
     border-radius: 150px;
     box-shadow: inset 2px 2px 8px -1px rgba($black, 0.1);
     box-sizing: border-box;
-    position: relative;
 }
 
 .pill__icon {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
     width: 138px;
     height: 138px;
     background: $gray-f8;
@@ -47,6 +47,7 @@
 .pill__text {
     @include font-size(12px);
 
+    margin-bottom: 0;
     line-height: 22px;
     text-align: center;
 
