--- a/src/stylesheets/components/_project-card.scss
+++ b/src/stylesheets/components/_project-card.scss
@@ -9,10 +9,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     margin-bottom: 1rem;
     width: 315px;
     height: 375px;
-    box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.1);
 
     @media(min-width: $screen-lg) {
         margin-bottom: 3rem;
@@ -23,6 +23,15 @@
 
 .project-card__image {
     width: 100%;
+}
+
+.project-card__shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 2px 2px 8px -1px rgba($black, 0.1);
 }
 
 .project-card__name {
