--- a/src/stylesheets/components/_project-card.scss
+++ b/src/stylesheets/components/_project-card.scss
@@ -3,6 +3,11 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 3.5rem;
+    transition: all .2s ease-in-out;
+
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
 .project-card__cover {
