--- a/src/stylesheets/components/_pill.scss
+++ b/src/stylesheets/components/_pill.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    padding: 4rem 1rem;
+    padding: 3rem 1rem;
     width: 300px;
     height: 445px;
     background: $gray-f8;
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 3rem;
+    margin-bottom: 2.5rem;
     width: 138px;
     height: 138px;
     background: $gray-f8;
@@ -36,7 +36,7 @@
 .pill__title {
     @include font-size(15px);
 
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
     font-weight: $font-weight-semibold;
 
     @media(min-width: $screen-md) {
@@ -45,10 +45,11 @@
 }
 
 .pill__text {
-    @include font-size(12px);
+    @include font-size(13px);
 
     margin-bottom: 0;
-    line-height: 22px;
+    padding: 0 1rem;
+    line-height: 24px;
     text-align: center;
 
     @media(min-width: $screen-md) {
