--- a/src/stylesheets/components/_pill.scss
+++ b/src/stylesheets/components/_pill.scss
@@ -10,6 +10,15 @@
     border-radius: 150px;
     box-shadow: inset 2px 2px 8px -1px rgba($black, 0.1);
     box-sizing: border-box;
+
+    @media(min-width: $screen-sm) {
+        margin: 0 0.5rem;
+    }
+
+    @media(min-width: $screen-lg) {
+        margin: 0;
+    }
+
 }
 
 .pill__icon {
@@ -19,6 +28,7 @@
     margin-bottom: 2.5rem;
     width: 138px;
     height: 138px;
+    min-height: 138px;
     background: $gray-f8;
     border-radius: $border-radius-cirlce;
     box-shadow: 0 10px 13px rgba(0, 0, 0, 0.1);
