--- a/src/stylesheets/components/_portfolio.scss
+++ b/src/stylesheets/components/_portfolio.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
 
-    @media(min-width: $screen-lg) {
+    @media(min-width: $screen-sm) {
         flex-direction: row;
         justify-content: space-between;
         flex-wrap: wrap;
