--- a/src/stylesheets/components/_project-card.scss
+++ b/src/stylesheets/components/_project-card.scss
@@ -3,10 +3,11 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 3.5rem;
-    transition: all .2s ease-in-out;
 
     &:hover {
-        transform: scale(1.1);
+        .project-card__image {
+            transform: scale(1.2);
+        }
     }
 }
 
@@ -18,6 +19,7 @@
     margin-bottom: 1rem;
     width: 315px;
     height: 375px;
+    overflow: hidden;
 
     @media(min-width: $screen-lg) {
         margin-bottom: 3rem;
@@ -28,6 +30,7 @@
 
 .project-card__image {
     width: 100%;
+    transition: all .2s ease-in-out;
 }
 
 .project-card__shadow {
