--- a/src/stylesheets/components/_our-team.scss
+++ b/src/stylesheets/components/_our-team.scss
@@ -1,18 +1,5 @@
 .our-team {
-    @extend %wrapper;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-
-    @media(min-width: $screen-lg) {
-        margin-top: -6rem;
-        margin-bottom: 6rem;
-        padding-top: 6rem;
-    }
+    @extend %section;
 }
 
 .our-team__list {
